# JSZ-Reconnaissance-vehicle

./: README.md
S3RemoteRGB-demo/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  partitions.csv  说明.txt
S3RemoteRGB-demo/components/esp32s3_soc/: .cproject  .project  CMakeLists.txt  component.mk
S3RemoteRGB-demo/components/lv_examples/: .cproject  .project  lv_demo_conf.h
S3RemoteRGB-demo/components/lvgl_esp32_drivers/: .cproject  .project  CMakeLists.txt  component.mk  lvgl_helpers.c  lvgl_helpers.h
S3RemoteRGB-demo/components/lvgl_esp32_drivers/lvgl_tft/: bsp_board.h  disp_driver.c  disp_driver.h  lv_port_disp.c  lv_port_disp.h
S3RemoteRGB-demo/components/lvgl_esp32_drivers/lvgl_touch/: gt911.c  lv_port_indev.c  lv_port_indev.h  touch_driver.c  touch_driver.h
S3RemoteRGB-demo/main/: .cproject  CMakeLists.txt  drive.c  drive.h  main.c  pic1.c  sd_card.c
S3RemoteRGB-demo/main/JPEGDecoder/: JPEGDecoder.c  JPEGDecoder.h
S3RemoteRGB-demo/main/ui/: func.c  func.h  mUdpTransmission.c  mUdpTransmission.h
esps3Robot-demo/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  myBoard.h  partitions.csv  sdkconfig  workspace.code-workspace
esps3Robot-demo/components/: mytft_config.h
esps3Robot-demo/main/: CMakeLists.txt  app_camera.c  app_camera.h  app_drive.c  app_drive.h  app_led.c  app_led.h  app_main.c  app_main.h  app_network.c  app_network.h  file_manager.c  file_manager.h  mUdpTransmission.c  mUdpTransmission.h  page_cam.c  page_cam.h  page_imu.c  page_imu.h  wav_player.c  wav_player.h
(+31 files in other folders)
